# toile-engine

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  asset-library-registry.json  demo_mcp.json  deny.toml  scene.json
.claude/: mcp.json
.github/workflows/: ci.yml
Aseprite - 15 Prototyped Animations Pack/: toile-asset-manifest.json
Aseprite - 15 Prototyped Animations Pack/Dash_Left_Right/: Dash_Left_Right_V2.aseprite
Aseprite - 15 Prototyped Animations Pack/Die/: Die_V2.aseprite
Aseprite - 15 Prototyped Animations Pack/Idle/: G3stalt_Idle_32x32_V4.aseprite
Aseprite - 15 Prototyped Animations Pack/Jump/: G3stalt_Jump_V13.aseprite
Aseprite - 15 Prototyped Animations Pack/Pipe Slide Grind (brush boarding lol)/: Grind_Pipe_Slide_V4.aseprite
Aseprite - 15 Prototyped Animations Pack/Respawn/: Respawn_V1.aseprite
Aseprite - 15 Prototyped Animations Pack/Run Anim/: G3stalt_Run_32x32_V7.aseprite
Aseprite - 15 Prototyped Animations Pack/Slide/: Slide_V2.aseprite
Aseprite - 15 Prototyped Animations Pack/Stretch Idle/: Stretch_V4.aseprite
Aseprite - 15 Prototyped Animations Pack/Wall Jump/: G3stalt_WalljumpV4.aseprite
Aseprite - 15 Prototyped Animations Pack/double jump/: DJump_40x40_V6.aseprite
FREE Mana Seed Character Base Demo 2.0/: this is only a demo.txt  toile-asset-manifest.json
assets/platformer/: level.json  player.json
crates/toile-app/: Cargo.toml
crates/toile-app/examples/: aseprite_demo.rs  audio_demo.rs  behaviors_demo.rs  bench_10k_sprites.rs  breakout.rs  event_sheet_demo.rs  gamepad_demo.rs  hello_window.rs  input_actions_demo.rs  ldtk_demo.rs  lighting_demo.rs  loading_demo.rs  msdf_font_demo.rs  particle_editor_demo.rs  particles_demo.rs  physics_demo.rs  platformer.rs  post_processing_demo.rs  prefab_demo.rs  scene_demo.rs  shader_editor_demo.rs  shadows_demo.rs  sprite_input.rs  template_demo.rs  tween_demo.rs
crates/toile-app/src/: lib.rs  scene.rs
crates/toile-asset-library/: Cargo.toml
crates/toile-asset-library/src/: ai_import.rs  classifier.rs  heuristics.rs  lib.rs  library.rs  manifest.rs  registry.rs  scanner.rs  thumbnail.rs  types.rs
crates/toile-asset-library/src/importers/: mod.rs  spritesheet_txt.rs
crates/toile-asset-library/src/ui/: browser_panel.rs  detail_panel.rs  file_browser.rs  mod.rs
crates/toile-assets/: Cargo.toml
crates/toile-assets/src/: animation.rs  aseprite.rs  async_loader.rs  font.rs  ldtk.rs  lib.rs  sdf_font.rs  tilemap.rs  ttf.rs
crates/toile-audio/: Cargo.toml
crates/toile-behaviors/: Cargo.toml
crates/toile-behaviors/src/: bullet.rs  fade.rs  lib.rs  platform.rs  sine.rs  topdown.rs  types.rs  wrap.rs
crates/toile-cli/: Cargo.toml
crates/toile-cli/src/: main.rs  templates.rs
crates/toile-collision/: Cargo.toml
crates/toile-collision/src/: lib.rs  narrow.rs  shape.rs  spatial_grid.rs
crates/toile-core/: Cargo.toml
crates/toile-core/src/: color.rs  curve.rs  gradient.rs  lib.rs  particles.rs  rect.rs  scene_stack.rs  time.rs  tween.rs
crates/toile-ecs/: Cargo.toml
crates/toile-ecs/src/: components.rs  lib.rs
crates/toile-editor/: Cargo.toml
crates/toile-editor/examples/: editor.rs
crates/toile-editor/src/: context_menu.rs  editor_app.rs  helpers.rs  input.rs  lib.rs  overlay.rs  particle_editor.rs  scene_data.rs  tilemap_tool.rs  ui_harness.rs  viewport.rs
crates/toile-editor/src/ai/: bug_reporter.rs  chat_panel.rs  client.rs  config.rs  mod.rs  tools.rs
crates/toile-editor/src/panels/: anim_states_ui.rs  input_map.rs  inspector.rs  mod.rs  overlay.rs  sprite_editor.rs  sprite_replace.rs
crates/toile-events/: Cargo.toml
crates/toile-events/src/: action.rs  condition.rs  executor.rs  lib.rs  model.rs  persistence.rs
crates/toile-graphics/: Cargo.toml
crates/toile-graphics/src/: camera.rs  custom_shader.rs  lib.rs  light_apply.wgsl  lighting.rs  post_bloom.wgsl  post_colorgrading.wgsl  post_crt.wgsl  post_passthrough.wgsl  post_pixelate.wgsl  post_processing.rs  post_screenshake.wgsl  post_vignette.wgsl  sdf_text.rs  shader_graph.rs  shadow_build.wgsl  sprite.wgsl  sprite_renderer.rs  texture.rs
crates/toile-harness/: Cargo.toml
crates/toile-harness/src/: headless.rs  lib.rs  main.rs  snapshot.rs
crates/toile-harness/tests/: smoke.rs
crates/toile-mcp/: Cargo.toml
crates/toile-mcp/src/: lib.rs
crates/toile-physics/: Cargo.toml
crates/toile-platform/: Cargo.toml
crates/toile-platform/src/: input.rs  input_actions.rs  lib.rs
crates/toile-runner/: Cargo.toml
crates/toile-runner/src/: game_runner.rs  lib.rs  manifest.rs
crates/toile-scene/: Cargo.toml
crates/toile-scene/src/: anim_runtime.rs  lib.rs  prefab.rs
crates/toile-scripting/: Cargo.toml
docs/: AUDIT-2026-06-13.md  EXAMPLES.md  MVP-PROPOSAL.md  ROADMAP.md  TESTING.md
docs/adr/: 000-adr-process.md  001-langage-rust.md  002-rendu-wgpu.md  003-windowing-sdl3.md  004-audio-kira.md  005-ecs-hecs.md  006-scripting-lua.md  007-editeur-egui.md  008-scene-format-json.md  009-architecture-modulaire.md  010-ai-native-mcp.md  011-licence-mit.md  012-particules-cpu.md  013-physique-rapier.md  014-scene-stack.md  015-tweening.md  016-assets-async.md  017-editeur-tilemap-painting.md  018-web-export-wasm.md  019-event-sheets.md  020-behaviors.md  021-prefabs.md  022-project-templates.md  023-ldtk-import.md  024-aseprite-binary.md  025-eclairage-2d.md  026-ombres-2d.md  027-shader-editor.md  028-polices-sdf.md  029-post-processing.md  030-editeur-particules.md  031-v05-editor-mvp-complet.md  032-asset-library.md  033-ai-copilot-editor.md  034-continuous-improvement-agent.md  035-gamepad-input-actions.md  036-ai-powered-asset-import.md  037-context-menus.md  038-animation-states.md  039-incremental-animation-ux.md  (+1 more)
docs/resources/: 01-languages-and-architecture.md  02-graphic-and-asset-formats.md  03-creation-tools.md  04-mvp-roadmap.md  05-existing-engines-criticisms-and-gaps.md  06-ai-driven-engine.md  (+1 more)
first-game/: Toile.toml
game2/: Toile.toml
game3/: Toile.toml
prefabs/: Coin.prefab.json  Enemy.prefab.json  Platform.prefab.json
tools/: screenshot-app.sh
(+21 files in other folders)
