[workspace]
resolver = "2"
members = [
    "crates/toile-core",
    "crates/toile-platform",
    "crates/toile-graphics",
    "crates/toile-app",
    "crates/toile-audio",
    "crates/toile-collision",
    "crates/toile-ecs",
    "crates/toile-assets",
    "crates/toile-scripting",
    "crates/toile-scene",
    "crates/toile-editor",
    "crates/toile-mcp",
    "crates/toile-cli",
    "crates/toile-physics",
    "crates/toile-events",
    "crates/toile-behaviors",
    "crates/toile-runner",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
license = "MIT"
repository = "https://github.com/toile-engine/toile"

[workspace.dependencies]
# Math
glam = "0.29"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"

# Windowing (winit for now, SDL3 planned — see ADR-003)
winit = "0.30"

# Rendering
wgpu = "27"
pollster = "0.4"

# Image loading
image = { version = "0.25", default-features = false, features = ["png"] }

# Compression (Aseprite binary cel data)
flate2 = "1"

# Data casting (vertex buffers, uniforms)
bytemuck = { version = "1", features = ["derive"] }

# Audio
kira = "0.9"

# Internal crates
toile-core = { path = "crates/toile-core" }
toile-platform = { path = "crates/toile-platform" }
toile-graphics = { path = "crates/toile-graphics" }
toile-app = { path = "crates/toile-app" }
toile-audio = { path = "crates/toile-audio" }
toile-collision = { path = "crates/toile-collision" }
toile-ecs = { path = "crates/toile-ecs" }
toile-assets = { path = "crates/toile-assets" }

# Font rasterization
fontdue = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Lua scripting
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }

# File watching (hot-reload)
notify = "8"

# Editor UI
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = { version = "0.33", features = ["wayland", "x11"] }

toile-editor = { path = "crates/toile-editor" }
toile-scene = { path = "crates/toile-scene" }

# MCP server
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

toile-scripting = { path = "crates/toile-scripting" }

# ECS
hecs = "0.11"

# Physics (optional)
rapier2d = "0.32"
toile-physics = { path = "crates/toile-physics" }
toile-events = { path = "crates/toile-events" }
toile-behaviors = { path = "crates/toile-behaviors" }
toile-runner = { path = "crates/toile-runner" }

# TOML parsing
toml_dep = { package = "toml", version = "0.8" }

# Native file dialogs
rfd = "0.15"
