[package]
name = "toile-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application framework for Toile Engine: game loop, lifecycle, re-exports"

[dependencies]
toile-core = { workspace = true }
toile-platform = { workspace = true }
toile-graphics = { workspace = true }
toile-audio = { workspace = true }
toile-assets = { workspace = true }
toile-collision = { workspace = true }
toile-ecs = { workspace = true }
toile-scripting = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
