[package]
name = "toile-asset-library"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Asset library for Toile Engine — import, classify, index, and browse game asset packs"

[[bin]]
name = "toile-asset-browser"
path = "src/bin/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
