[package]
name = "toile-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Asset management for Toile Engine"

[dependencies]
glam = { workspace = true }
log = { workspace = true }
fontdue = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toile-graphics = { workspace = true }
toile-scene = { workspace = true }
image = { workspace = true }
flate2 = { workspace = true }
