[package]
name = "toile-behaviors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pre-built gameplay behaviors for Toile Engine"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
