[package]
name = "toile-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Toile Engine"

[[bin]]
name = "toile"
path = "src/main.rs"

[dependencies]
toile-scene = { workspace = true }
toile-editor = { workspace = true }
toile-behaviors = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
