[package]
name = "toile-collision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "2D collision detection for Toile Engine"

[dependencies]
glam = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
