[package]
name = "toile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for Toile Engine: math, color, time, handles"

[dependencies]
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json", "glam/serde"]
