[package]
name = "toile-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visual editor for Toile Engine (egui-based)"

[[bin]]
name = "toile-editor"
path = "src/bin/main.rs"

[dependencies]
toile-app = { workspace = true }
toile-scene = { workspace = true }
toile-core = { path = "../toile-core", features = ["serde"] }
toile-behaviors = { workspace = true }
toile-graphics = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
toile-assets = { workspace = true }
