[package]
name = "toile-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu-based 2D renderer for Toile Engine"

[dependencies]
toile-core = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
