[package]
name = "toile-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for AI-native control of Toile Engine"

[[bin]]
name = "toile-mcp-server"
path = "src/bin/server.rs"

[dependencies]
toile-scene = { workspace = true }
toile-core = { path = "../toile-core", features = ["serde"] }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
schemars = { workspace = true }
