[package]
name = "toile-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scene data model for Toile Engine (JSON serialization)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
toile-behaviors = { workspace = true }
